--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 	<title>Home</title>
 </head>
 <body>
-	<h2>Home page</h2>
-	<img src="test.png" alt="Girl in a jacket">
+	<h2>Home page (IP address: %s)</h2>
+    <img src="images/one_piece.jpg" alt="image">
 </body>
 </html>
