adding main file and backup files

--- a/static/index.html
+++ b/static/index.html
@@ -2,8 +2,8 @@
 <head>
 	<title>Home</title>
 </head>
-<body>
-	<h2>Home page (IP address: %s)</h2>
-    <img src="images/one_piece.jpg" alt="image">
+<body style="background-color:powderblue;">
+	<h2>Home page</h2>
+    <img src="/images/one_piece.jpg" alt="image">
 </body>
 </html>
